update logic and swagger
